[package]
name = "abzu-lightning"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core utilities
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Storage
sled = "0.34"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = { version = "0.1", optional = true }

# Abzu integration (optional)
# Abzu integration (optional - uncomment and point to your abzu instance)
# abzu-runtime = { path = "../../abzu-runtime", optional = true }

# Logging
tracing = "0.1"

# UUID generation for span IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = []
plugin = ["async-trait"] # Add "abzu-runtime" here when enabled

[dev-dependencies]
tempfile = "3.0"
