[package]
name = "abzu-lightning-ppo"
version = "0.1.0"
edition = "2021"

[dependencies]
abzu-lightning-core = { path = "../abzu-lightning-core" }
candle-core = "0.9.2"
candle-nn = "0.9.2"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
