[package]
name = "abzu-lightning"
version = "0.1.0"
edition = "2021"

[dependencies]
abzu-lightning-core = { path = "../abzu-lightning-core" }
abzu-lightning-ppo = { path = "../abzu-lightning-ppo", optional = true }
abzu-lightning-apo = { path = "../abzu-lightning-apo", optional = true }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

# Plugin Integration
abzu-runtime = { path = "../../abzu-runtime", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = []
ppo = ["dep:abzu-lightning-ppo"]
apo = ["dep:abzu-lightning-apo"]
plugin = ["abzu-runtime", "async-trait"]

[dev-dependencies]
tempfile = "3.0"
